fixed home menu z-index problem

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -444,6 +444,8 @@ section h2 strong {
 
 .btn-wrap {
     margin-top: -18px;
+    z-index: 10;
+    position: relative;    
 }
 
 @media(max-width:993px) {
